[package]
name = "repotool"
version = "0.1.0"
authors = ["Tomer Abramovich <untradeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde_json = { version = "1.0.52" }
scraper = "0.12.0"